--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
   "keywords": [],
   "license": "MIT",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "bufferutil": "^4.0.6",
+    "chromium": "^3.0.3",
     "electron-json-storage": "^4.5.0",
-    "puppeteer": "^17.1.3",
+    "ncp": "^2.0.0",
+    "puppeteer": "^18.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
     "react-router-dom": "^6.4.0",
+    "request": "^2.88.2",
     "steamcommunity": "^3.44.2",
     "user-agents": "^1.0.1144",
+    "utf-8-validate": "^5.0.9",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -38,8 +45,10 @@
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@types/electron-devtools-installer": "2.2.0",
     "@types/electron-json-storage": "^4.5.0",
+    "@types/ncp": "^2.0.5",
     "@types/react": "^17.0.42",
     "@types/react-dom": "^17.0.14",
+    "@types/request": "^2.48.8",
     "@types/user-agents": "^1.0.2",
     "@types/uuid": "^8.3.4",
     "babel-loader": "^8.2.4",
